Added first analytics
